# PROJ-ORB-Lite

./: .gitignore  CMakeLists.txt  atlas_map_0.csv  atlas_map_1.csv  atlas_map_2.csv  atlas_map_3.csv  atlas_map_4.csv  atlas_map_5.csv  atlas_map_6.csv  atlas_map_7.csv  log.txt  map_output.csv  mapping_log.txt
data/2026_05_12_12_42_43/: Accelerometer.csv  Gyroscope.csv  video_meta.pb3
data/2026_05_12_17_22_15/: Accelerometer.csv  Gyroscope.csv  video_meta.pb3
data/2026_05_12_17_51_47/: Accelerometer.csv  Gyroscope.csv  video_meta.pb3
include/: Atlas.hpp  BoW.hpp  DataLoader.hpp  IMU.hpp  KeyFrameDatabase.hpp  LoopClosing.hpp  Map.hpp  Math.hpp  Optimizer.hpp  Tracking.hpp  Vision.hpp
scratch/: revert_tracking.cpp
scripts/: pull_data.py  view_map.py
scripts/proto_python/: recording_pb2.py
src/: Atlas.cpp  BoW.cpp  DataLoader.cpp  IMU.cpp  KeyFrameDatabase.cpp  LoopClosing.cpp  Main.cpp  Map.cpp  Optimizer.cpp  Tracking.cpp  Vision.cpp
test/: catch.hpp  run_tests.sh  test_ba.cpp  test_bootstrapping.cpp  test_imu.cpp  test_jacobian.cpp  test_mapping.cpp  test_vision.cpp
